--- a/python/rollup_tests.ipynb
+++ b/python/rollup_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -10,14 +10,15 @@
      "output_type": "stream",
      "text": [
       "✅ Wallet Created!\n",
-      "Address: 0xCf3Bf20DDB7BA891a81a74d890D776E4EEECFb74\n",
-      "Private Key: 5b51da12899cc7d65974064e7dfdc15cce4a62ab78bba4fc0dbc0e0492fc4036\n"
+      "Address: 0x31C014E5f9ad130c5Cf7a4526886c9AcffeBD1A3\n",
+      "Private Key: acdfd655510f3aedd17f38717d76db468e4aacb92a256722830435ebf75ee1b4\n"
      ]
     }
    ],
    "source": [
     "from web3 import Web3\n",
     "from eth_account import Account\n",
+    "import json\n",
     "\n",
     "# ---------------- STEP 1: CREATE A WALLET ----------------\n",
     "wallet = Account.create()\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -54,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "💰 Wallet Balance: 0.034893640919914966 ETH\n"
+      "💰 Wallet Balance: 0.011718599979570547 ETH\n"
      ]
     }
    ],
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,13 +85,13 @@
     "with open('../out/SwarmCoordinator.sol/SwarmCoordinator.json', 'r') as f:\n",
     "   contract_abi = json.load(f)['abi']\n",
     "\n",
-    "contract_address = \"0x915674138096b84aa3CD05cB0F9c2EEE24b192C5\"\n",
+    "contract_address = \"0x6484a07281B72b8b541A86Ec055534223672c2fb\"\n",
     "contract = web3.eth.contract(address=contract_address, abi=contract_abi)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -115,14 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transaction hash: 0x92bf612c04f6eda428350afd5677458d929bca2d3bc01a508f6af5f51c261f6f\n"
+      "Transaction hash: 0x1d434db369d3f7a9aa1926fcaa0f5030065ce5ea4e67b1071b1a3dfdbb5f7fb5\n"
      ]
     }
    ],
@@ -130,7 +131,7 @@
     "# ---------------- STEP 6: REGISTER PEER ----------------\n",
     "\n",
     "# Peer ID and private key\n",
-    "peer_id = b\"grieve_peer\"\n",
+    "peer_id = \"grievepeer\"\n",
     "\n",
     "checksummed = Web3.to_checksum_address(WALLET_ADDRESS)\n",
     "nonce = web3.eth.get_transaction_count(checksummed)\n",
@@ -139,7 +140,7 @@
     "# Build the transaction\n",
     "txn = contract.functions.registerPeer(peer_id).build_transaction({\n",
     "    'chainId': 685685,  # Mainnet\n",
-    "    'gas': 500000,\n",
+    "    'gas': 21604,\n",
     "    'gasPrice': web3.to_wei('50', 'gwei'),\n",
     "    'nonce': nonce,\n",
     "})\n",
@@ -153,6 +154,58 @@
     "# Print the transaction hash\n",
     "print(f\"Transaction hash: {web3.to_hex(tx_hash)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transaction hash: 0xdd5ec8e067150d3c949df9bd671e4b0aeac6ba3b7164366dc70f4490be34b555\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ---------------- STEP 7: SUBMIT ANSWER ----------------\n",
+    "\n",
+    "# wallet addr and nonce\n",
+    "checksummed = Web3.to_checksum_address(WALLET_ADDRESS)\n",
+    "nonce = web3.eth.get_transaction_count(checksummed)\n",
+    "\n",
+    "payload = [\n",
+    "\n",
+    "]\n",
+    "\n",
+    "# Build the transaction\n",
+    "txn = contract.functions.submitWinners(\n",
+    "        0,\n",
+    "        ['grievepeer'],\n",
+    "    ).build_transaction({\n",
+    "    'chainId': 685685,  # Mainnet\n",
+    "    'gas': 10000000,\n",
+    "    'gasPrice': web3.to_wei('10', 'gwei'),\n",
+    "    'nonce': nonce,\n",
+    "})\n",
+    "\n",
+    "# Sign the transaction\n",
+    "signed_txn = web3.eth.account.sign_transaction(txn, private_key=PRIVATE_KEY)\n",
+    "\n",
+    "# Send the transaction\n",
+    "tx_hash = web3.eth.send_raw_transaction(signed_txn.raw_transaction)\n",
+    "\n",
+    "# Print the transaction hash\n",
+    "print(f\"Transaction hash: {web3.to_hex(tx_hash)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
